2000-06-07  Philippe De Muyter  <phdm@macqel.be>

	`foo=1 foo=2 cmd' has an undefined behavior.

	* acgeneral.m4 (_AC_COMPUTE_INT_COMPILE): Do not put two shell
	variable assignments in one shell command.
	* doc/autoconf.texi (Shell Substitutions): Document.

2000-06-07  Steven G. Johnson  <stevenj@alum.mit.edu>

	* aclang.m4 (AC_F77_LIBRARY_LDFLAGS): Fix problem on Cray due to
	confusion from the link command getting echoed in quotes.  In the
	future, a more general fix for quoted arguments with spaces might
	be better.

2000-06-07  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Limitations of Builtins): More on `test' and
	`case'.
	Some on `if' and `break'.

2000-06-07  Morten Eriksen  <mortene@sim.no>

	* acspecific.m4 (_AC_PATH_X_DIRECT): Include `X11/Intrinsic.h'
	when trying to use `XtMalloc' to actually have a chance of
	succeeding.

2000-06-07  Akim Demaille  <akim@epita.fr>

	Hard (code) X.

	* acspecific.m4 (_AC_PATH_X_DIRECT): Hard code `X11/Intrinsic.h'
	instead of using `ac_x_direct_test_include', likewise for `Xt' and
	`ac_x_direct_test_lib', `XtMalloc' and
	`ac_x_direct_test_function'.

2000-06-07  Akim Demaille  <akim@epita.fr>

	* acspecific.m4 (AC_PATH_X): Use AC_DIVERT.
	Use `no', not `NO' for ac_x_includes and ac_x_libraries.
	Adjust dependencies.
	(_AC_PATH_X_DIRECT): Introduce ac_x_header_dirs to factor the list
	of places where headers and libs might be.
	(AC_PATH_XTRA): Don't quote the argument of `case'.

2000-06-07  Jim Meyering  <meyering@lucent.com>

	* acgeneral.m4 (_AC_OUTPUT_CONFIG_STATUS): Put the expansion of
	AC_LIST_LINKS in an unquoted `here'-document.

2000-06-06  Akim Demaille  <akim@epita.fr>

	* tests/aclocal.m4 (AC_ENV_SAVE): Skip `no_x'.
	From Mark Elbrecht.

2000-06-05  Mo DeJong  <mdejong@cygnus.com>

	* acgeneral.m4 (_AC_INIT_PARSE_ARGS): Move the setting
	of ac_tool_prefix before the call to AC_DIVERT_POP.

2000-06-05  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_CHECK_TOOL_PREFIX): AU define it.